<resources>
    <string name="app_name">KGWD_Diary</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Log In</string>
    <string name="dearBrand">DEAR</string>
    <string name="diaryBrand">DIARY</string>
    <string name="back">Back</string>
    <string name="new_entry">New Entry</string>
    <string name="title">Title</string>
    <string name="write_diary">Write your Diary...</string>
    <string name="save_entry">Save Entry</string>
    <string name="my_diary">My Diary</string>
    <string name="about_us">About Us</string>
    <string name="mica_name">Michaela Gonzales</string>
    <string name="alex_name">Alexa Gagan</string>
    <string name="shane_name">Shane Oxina</string>
    <string name="alex_desc">Lead Developer</string>
    <string name="mica_desc">Backend Developer</string>
    <string name="shane_desc">Frontend Developer</string>
</resources>