<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mydiary_backgroud"
    tools:context=".FirstScreen">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:width="130dp"
        android:background="@drawable/input_text_radius"
        app:backgroundTint="@color/purple_200"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDiary" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="130dp"
        android:background="@drawable/input_text_radius"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/signup"
        android:textColor="@color/material_dynamic_neutral40"
        app:backgroundTint="@color/lightgray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvDear"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/dearBrand"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="195dp"
        android:layout_height="200dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mydiary_logo" />

    <TextView
        android:id="@+id/tvDiary"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/diaryBrand"
        android:textColor="@color/white"
        android:textSize="66.5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDear" />
</androidx.constraintlayout.widget.ConstraintLayout>